--- a/inde.html
+++ b/inde.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <div class="dsmovie-contact-container"> 
+            <div class="dsmovie-contact-container">
                 <img src="img/github.svg" alt="github">
                 <a href="https://github.com/cauabruscky">/cauabruscky</a>
             </div>
@@ -26,6 +26,18 @@
         </nav>
     </header>
 
+    <main>
+        <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="the witcher">
+                <div class="dsmovie-card-description">
+                    <h3>The Witcher</h3>
+                    <a href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
